# LuxCor

./: CMakeLists.txt  LuxCor.c  README.md
lib/: bh1750_light_sensor.c  gy33.c  gy33.h  matriz_leds.c  matriz_leds.h
